# rust-jsonrpc-client

./: .dprintrc.json  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: .dependabot.yml
.github/workflows/: CI.yml  create-release.yml  draft-new-release.yml  release-lib-crates-io.yml
lib/: Cargo.toml
lib/examples/: bitcoind.rs  custom_method.rs  customize_path.rs  isahc.rs  reqwest.rs  reqwest_async.rs  reqwest_blocking.rs  surf.rs  ureq.rs
lib/src/: awc.rs  isahc.rs  lib.rs  reqwest.rs  surf.rs  ureq.rs
lib/tests/: api_macro.rs  happy_path.rs  macros.rs  ui.rs
lib/tests/pass/: lint_is_carried_over.rs  trait_in_module.rs
lib/tests/ui/: client_error_needs_to_implement_from.rs  client_error_needs_to_implement_from.stderr  client_without_attr_and_naming_convention.rs  client_without_attr_and_naming_convention.stderr  client_without_base_url.rs  client_without_base_url.stderr  client_without_fields.rs  client_without_fields.stderr  default_body.rs  default_body.stderr  fn_must_be_async.rs  fn_must_be_async.stderr  invalid_version.rs  invalid_version.stderr  non_serializable_arguments.rs  non_serializable_arguments.stderr  non_serializable_return_value.rs  non_serializable_return_value.stderr  other_attribute.rs  other_attribute.stderr  trait_with_const.rs  trait_with_const.stderr  trait_with_type.rs  trait_with_type.stderr
macro/: Cargo.toml
macro/src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
