[package]
name = "jsonrpc_client_macro"
version = "0.1.0"
authors = [ "Thomas Eizinger <thomas@eizinger.io>" ]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = [ "full" ] }

[dev-dependencies]
anyhow = "1"
async-trait = "0.1"
reqwest = "0.10"
